feat: finish products crud
